<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Todo_list.ORANGE">

    <androidx.cardview.widget.CardView
        android:id="@+id/viewingCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/HeaderTVViewing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="casual"
            android:text="@string/HeaderTVViewing"
            android:textAlignment="center"
            android:textColor="#EF6C00"
            android:textSize="30sp"
            android:textStyle="bold"
            android:theme="@style/Theme.Todo_list.ORANGE"
            android:typeface="normal" />

        <TextView
            android:id="@+id/titleItemTVViewing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_horizontal|fill_vertical"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:text="@string/titleItemTV"
            android:textAlignment="center"
            android:textColor="#EF6C00"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titleViewing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="16dp"
            android:text="@string/titleViewing"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/extraDescriptionTVViewing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_horizontal|fill_vertical"
            android:layout_marginTop="320dp"
            android:gravity="center"
            android:text="@string/extraDescriptionTVViewing"
            android:textAlignment="center"
            android:textColor="#EF6C00"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/extraDescriptionViewing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="360dp"
            android:layout_marginEnd="16dp"
            android:text="@string/extraDescriptionViewing"
            android:textAlignment="center"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/Back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewingCardView"/>
</androidx.constraintlayout.widget.ConstraintLayout>